Fetch the other repository due to the overwrite pushing

--- a/data_processing/clean_data.ipynb
+++ b/data_processing/clean_data.ipynb
@@ -243,6 +243,346 @@
     "df4 = pd.DataFrame(df3[\"ingredients\"].unique(), columns=[\"ingredient\"])\n",
     "df4.to_excel(\"clean_ingredients.xlsx\", index=False)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>restaurant_name</th>\n",
+       "      <th>menu_image</th>\n",
+       "      <th>menu_name</th>\n",
+       "      <th>ingredients</th>\n",
+       "      <th>characteristics</th>\n",
+       "      <th>menu_category</th>\n",
+       "      <th>matched_allergies</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Starbucks (สตาร์บัคส์)</td>\n",
+       "      <td>https://img.wongnai.com/p/400x400/2025/02/13/b...</td>\n",
+       "      <td>Blossom Coconut Roll</td>\n",
+       "      <td>แป้งเค้ก, มะพร้าวขูด, น้ำตาล, ไข่, เนย</td>\n",
+       "      <td>หวาน, มัน</td>\n",
+       "      <td>ของหวาน, เบเกอรี/เค้ก</td>\n",
+       "      <td>นม, แป้งสาลี, ไข่</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Starbucks (สตาร์บัคส์)</td>\n",
+       "      <td>https://img.wongnai.com/p/400x400/2025/02/13/1...</td>\n",
+       "      <td>Lychee Rose Juice Mixed with Pomegranate</td>\n",
+       "      <td>ลิ้นจี่, น้ำกุหลาบ, น้ำทับทิม, น้ำตาล, น้ำแข็ง</td>\n",
+       "      <td>หวาน, เปรี้ยว, มัน</td>\n",
+       "      <td>เครื่องดื่ม/น้ำผลไม้</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Starbucks (สตาร์บัคส์)</td>\n",
+       "      <td>https://img.wongnai.com/p/400x400/2025/02/13/6...</td>\n",
+       "      <td>Mango Yogurt Cake</td>\n",
+       "      <td>มะม่วง, โยเกิร์ต, แป้งเค้ก, น้ำตาล, ไข่, เนย</td>\n",
+       "      <td>หวาน, มัน</td>\n",
+       "      <td>ของหวาน, เบเกอรี/เค้ก</td>\n",
+       "      <td>นม, แป้งสาลี, ไข่</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Starbucks (สตาร์บัคส์)</td>\n",
+       "      <td>https://img.wongnai.com/p/400x400/2025/02/13/a...</td>\n",
+       "      <td>Honey Nougat Cream Frappuccino</td>\n",
+       "      <td>นม, น้ำผึ้ง, นูกัต, ครีม, กาแฟ, น้ำแข็ง</td>\n",
+       "      <td>หวาน, มัน</td>\n",
+       "      <td>เครื่องดื่ม/น้ำผลไม้</td>\n",
+       "      <td>ถั่วเปลือกแข็ง,นม, นม</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Starbucks (สตาร์บัคส์)</td>\n",
+       "      <td>https://img.wongnai.com/p/400x400/2025/02/13/0...</td>\n",
+       "      <td>Honey Nougat Oatmilk Macchiato</td>\n",
+       "      <td>นมข้าวโอ๊ต, น้ำผึ้ง, นูกัต, กาแฟ</td>\n",
+       "      <td>หวาน, มัน</td>\n",
+       "      <td>เครื่องดื่ม/น้ำผลไม้</td>\n",
+       "      <td>ถั่วเปลือกแข็ง,นม</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2868</th>\n",
+       "      <td>TiTiCaCa Booth</td>\n",
+       "      <td>https://img.wongnai.com/p/400x400/2023/12/29/2...</td>\n",
+       "      <td>cold cuts</td>\n",
+       "      <td>เนื้อสัตว์แปรรูป, ผัก</td>\n",
+       "      <td>เค็ม, หอม, นุ่ม</td>\n",
+       "      <td>อาหารจานเดียว</td>\n",
+       "      <td>ถั่วเหลือง</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2869</th>\n",
+       "      <td>TiTiCaCa Booth</td>\n",
+       "      <td>https://img.wongnai.com/p/400x400/2024/06/01/c...</td>\n",
+       "      <td>hash brown</td>\n",
+       "      <td>มันฝรั่ง</td>\n",
+       "      <td>เค็ม, มัน, กรอบ</td>\n",
+       "      <td>อาหารจานเดียว</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2870</th>\n",
+       "      <td>TiTiCaCa Booth</td>\n",
+       "      <td>https://img.wongnai.com/p/400x400/2023/12/29/b...</td>\n",
+       "      <td>Chicken pate</td>\n",
+       "      <td>ไก่บด, เครื่องเทศ</td>\n",
+       "      <td>มัน, กรอบ, เค็ม</td>\n",
+       "      <td>อาหารจานเดียว</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2871</th>\n",
+       "      <td>TiTiCaCa Booth</td>\n",
+       "      <td>https://img.wongnai.com/p/400x400/2023/12/29/8...</td>\n",
+       "      <td>pork tacos</td>\n",
+       "      <td>หมู, แป้งตอร์ติญ่า, ผัก</td>\n",
+       "      <td>เผ็ด, หอม, มัน</td>\n",
+       "      <td>อาหารเม็กซิกัน</td>\n",
+       "      <td>แป้งสาลี</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2872</th>\n",
+       "      <td>TiTiCaCa Booth</td>\n",
+       "      <td>https://img.wongnai.com/p/400x400/2024/06/01/6...</td>\n",
+       "      <td>fish and chips</td>\n",
+       "      <td>ปลาทอด, มันฝรั่งทอด, ทาร์ทาร์ซอส</td>\n",
+       "      <td>กรอบ, หอม, เค็ม</td>\n",
+       "      <td>อาหารฟิวชั่น</td>\n",
+       "      <td>ปลา, ไข่,นม</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2873 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             restaurant_name  \\\n",
+       "0     Starbucks (สตาร์บัคส์)   \n",
+       "1     Starbucks (สตาร์บัคส์)   \n",
+       "2     Starbucks (สตาร์บัคส์)   \n",
+       "3     Starbucks (สตาร์บัคส์)   \n",
+       "4     Starbucks (สตาร์บัคส์)   \n",
+       "...                      ...   \n",
+       "2868          TiTiCaCa Booth   \n",
+       "2869          TiTiCaCa Booth   \n",
+       "2870          TiTiCaCa Booth   \n",
+       "2871          TiTiCaCa Booth   \n",
+       "2872          TiTiCaCa Booth   \n",
+       "\n",
+       "                                             menu_image  \\\n",
+       "0     https://img.wongnai.com/p/400x400/2025/02/13/b...   \n",
+       "1     https://img.wongnai.com/p/400x400/2025/02/13/1...   \n",
+       "2     https://img.wongnai.com/p/400x400/2025/02/13/6...   \n",
+       "3     https://img.wongnai.com/p/400x400/2025/02/13/a...   \n",
+       "4     https://img.wongnai.com/p/400x400/2025/02/13/0...   \n",
+       "...                                                 ...   \n",
+       "2868  https://img.wongnai.com/p/400x400/2023/12/29/2...   \n",
+       "2869  https://img.wongnai.com/p/400x400/2024/06/01/c...   \n",
+       "2870  https://img.wongnai.com/p/400x400/2023/12/29/b...   \n",
+       "2871  https://img.wongnai.com/p/400x400/2023/12/29/8...   \n",
+       "2872  https://img.wongnai.com/p/400x400/2024/06/01/6...   \n",
+       "\n",
+       "                                     menu_name  \\\n",
+       "0                         Blossom Coconut Roll   \n",
+       "1     Lychee Rose Juice Mixed with Pomegranate   \n",
+       "2                            Mango Yogurt Cake   \n",
+       "3               Honey Nougat Cream Frappuccino   \n",
+       "4               Honey Nougat Oatmilk Macchiato   \n",
+       "...                                        ...   \n",
+       "2868                                 cold cuts   \n",
+       "2869                                hash brown   \n",
+       "2870                              Chicken pate   \n",
+       "2871                                pork tacos   \n",
+       "2872                            fish and chips   \n",
+       "\n",
+       "                                         ingredients     characteristics  \\\n",
+       "0             แป้งเค้ก, มะพร้าวขูด, น้ำตาล, ไข่, เนย           หวาน, มัน   \n",
+       "1     ลิ้นจี่, น้ำกุหลาบ, น้ำทับทิม, น้ำตาล, น้ำแข็ง  หวาน, เปรี้ยว, มัน   \n",
+       "2       มะม่วง, โยเกิร์ต, แป้งเค้ก, น้ำตาล, ไข่, เนย           หวาน, มัน   \n",
+       "3            นม, น้ำผึ้ง, นูกัต, ครีม, กาแฟ, น้ำแข็ง           หวาน, มัน   \n",
+       "4                   นมข้าวโอ๊ต, น้ำผึ้ง, นูกัต, กาแฟ           หวาน, มัน   \n",
+       "...                                              ...                 ...   \n",
+       "2868                           เนื้อสัตว์แปรรูป, ผัก     เค็ม, หอม, นุ่ม   \n",
+       "2869                                        มันฝรั่ง     เค็ม, มัน, กรอบ   \n",
+       "2870                               ไก่บด, เครื่องเทศ     มัน, กรอบ, เค็ม   \n",
+       "2871                         หมู, แป้งตอร์ติญ่า, ผัก      เผ็ด, หอม, มัน   \n",
+       "2872                ปลาทอด, มันฝรั่งทอด, ทาร์ทาร์ซอส     กรอบ, หอม, เค็ม   \n",
+       "\n",
+       "              menu_category      matched_allergies  \n",
+       "0     ของหวาน, เบเกอรี/เค้ก      นม, แป้งสาลี, ไข่  \n",
+       "1      เครื่องดื่ม/น้ำผลไม้                    NaN  \n",
+       "2     ของหวาน, เบเกอรี/เค้ก      นม, แป้งสาลี, ไข่  \n",
+       "3      เครื่องดื่ม/น้ำผลไม้  ถั่วเปลือกแข็ง,นม, นม  \n",
+       "4      เครื่องดื่ม/น้ำผลไม้      ถั่วเปลือกแข็ง,นม  \n",
+       "...                     ...                    ...  \n",
+       "2868          อาหารจานเดียว             ถั่วเหลือง  \n",
+       "2869          อาหารจานเดียว                    NaN  \n",
+       "2870          อาหารจานเดียว                    NaN  \n",
+       "2871         อาหารเม็กซิกัน               แป้งสาลี  \n",
+       "2872           อาหารฟิวชั่น            ปลา, ไข่,นม  \n",
+       "\n",
+       "[2873 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "data = pd.read_excel(\"Menu model.xlsx\")\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "category_list = [\n",
+    "    \"อาหารตามสั่ง\",\n",
+    "    \"อาหารทะเล\",\n",
+    "    \"หมูกระทะ\",\n",
+    "    \"อาหารจานเดียว\",\n",
+    "    \"ชานมไข่มุก\",\n",
+    "    \"เบอร์เกอร์\",\n",
+    "    \"ก๋วยเตี๋ยว\",\n",
+    "    \"อาหารเช้า\",\n",
+    "    \"ติ่มซำ\",\n",
+    "    \"ของหวาน\",\n",
+    "    \"อาหารคลีน/สลัด\",\n",
+    "    \"เครื่องดื่ม/น้ำผลไม้\",\n",
+    "    \"ชาบู/สุกี้ยากี้/หม้อไฟ\",\n",
+    "    \"ซูชิ\",\n",
+    "    \"เบเกอรี/เค้ก\",\n",
+    "    \"สเต๊ก\",\n",
+    "    \"อาหารมังสวิรัติ\",\n",
+    "    \"ปิ้งย่าง\",\n",
+    "    \"ไอศกรีม\",\n",
+    "    \"อาหารเจ\",\n",
+    "    \"ฟาสต์ฟู้ด/จานด่วน\",\n",
+    "    \"พิซซ่า\",\n",
+    "    \"ราเมง\",\n",
+    "    \"อาหารไทย\",\n",
+    "    \"อาหารเกาหลี\",\n",
+    "    \"อาหารอเมริกัน\",\n",
+    "    \"อาหารอีสาน\",\n",
+    "    \"อาหารฟิวชั่น\",\n",
+    "    \"อาหารอินเดีย\",\n",
+    "    \"อาหารญี่ปุ่น\",\n",
+    "    \"อาหารใต้\",\n",
+    "    \"อาหารฝรั่งเศส\",\n",
+    "    \"อาหารจีน\",\n",
+    "    \"อาหารเหนือ\",\n",
+    "    \"อาหารเม็กซิกัน\",\n",
+    "    \"อาหารมุสลิม/ฮาลาล\",\n",
+    "    \"อาหารอิตาเลียน\",\n",
+    "    \"อาหารเยอรมัน\",\n",
+    "    \"อาหารนานาชาติ\",\n",
+    "    \"อาหารเวียดนาม\"\n",
+    "]\n",
+    "\n",
+    "menu_set = set()\n",
+    "\n",
+    "#Loop through the menu_category columns where its look like ไอศกรีม, อาหารไทย to check if the category that isn't in the category_list\n",
+    "for index, row in data.iterrows():\n",
+    "    for category in row[\"menu_category\"].split(\",\"):\n",
+    "        if category not in category_list:\n",
+    "            menu_set.add(category)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{' ก๋วยเตี๋ยว',\n",
+       " ' ของหวาน',\n",
+       " ' ชานมไข่มุก',\n",
+       " ' ปิ้งย่าง',\n",
+       " ' ฟาสต์ฟู้ด/จานด่วน',\n",
+       " ' สเต๊ก',\n",
+       " ' อาหารคลีน/สลัด',\n",
+       " ' อาหารจานด่วน',\n",
+       " ' อาหารจานเดียว',\n",
+       " ' อาหารญี่ปุ่น',\n",
+       " ' อาหารตามสั่ง',\n",
+       " ' อาหารทะเล',\n",
+       " ' อาหารนานาชาติ',\n",
+       " ' อาหารฟิวชั่น',\n",
+       " ' อาหารมังสวิรัติ',\n",
+       " ' อาหารยุโรป',\n",
+       " ' อาหารอิตาเลียน',\n",
+       " ' อาหารอีสาน',\n",
+       " ' อาหารอเมริกัน',\n",
+       " ' อาหารฮาวาย',\n",
+       " ' อาหารเช้า',\n",
+       " ' อาหารเหนือ',\n",
+       " ' อาหารใต้',\n",
+       " ' อาหารไทย',\n",
+       " ' เครื่องดื่ม/น้ำผลไม้',\n",
+       " ' เบอร์เกอร์',\n",
+       " ' เบเกอรี/เค้ก',\n",
+       " ' ไอศกรีม',\n",
+       " 'อาหารจานด่วน',\n",
+       " 'อาหารว่าง',\n",
+       " 'อาหารสุขภาพ',\n",
+       " 'เคบับ'}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "menu_set"
+   ]
   }
  ],
  "metadata": {
