--- a/data_processing/download_picture.ipynb
+++ b/data_processing/download_picture.ipynb
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
        "[2873 rows x 3 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +678,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_8956\\740301208.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  data.fillna('', inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = df2[420:]\n",
+    "data.fillna('', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1115,8 +1137,10 @@
     "driver = webdriver.Chrome(ChromeDriverManager().install(), options=options)\n",
     "base_dir = r\"E:\\ProjectImage\"\n",
     "\n",
-    "for index, row in df2.iterrows():\n",
+    "for index, row in data.iterrows():\n",
     "    url = row['menu_image']\n",
+    "    if url == '':\n",
+    "        continue\n",
     "    restaurant = str(row['restaurant_name'])\n",
     "    menu = str(row['menu_name'])\n",
     "    \n",
@@ -1144,6 +1168,146 @@
     "\n",
     "driver.quit()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>restaurant_name</th>\n",
+       "      <th>menu_name</th>\n",
+       "      <th>menu_image</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>420</th>\n",
+       "      <td>Pan Bagels (แพน เบเกิลส์)</td>\n",
+       "      <td>Iced Ceylon Tea Latte</td>\n",
+       "      <td>https://img.wongnai.com/p/400x400/2024/07/03/7...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>421</th>\n",
+       "      <td>Pan Bagels (แพน เบเกิลส์)</td>\n",
+       "      <td>Thai Iced Tea</td>\n",
+       "      <td>https://img.wongnai.com/p/400x400/2023/08/23/9...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>422</th>\n",
+       "      <td>Pan Bagels (แพน เบเกิลส์)</td>\n",
+       "      <td>Orange Matcha</td>\n",
+       "      <td>https://img.wongnai.com/p/400x400/2024/07/03/c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>423</th>\n",
+       "      <td>Pan Bagels (แพน เบเกิลส์)</td>\n",
+       "      <td>Iced Coconut Matcha</td>\n",
+       "      <td>https://img.wongnai.com/p/400x400/2024/12/28/e...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>424</th>\n",
+       "      <td>Pan Bagels (แพน เบเกิลส์)</td>\n",
+       "      <td>Iced Matcha Latte</td>\n",
+       "      <td>https://img.wongnai.com/p/400x400/2023/08/23/f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2868</th>\n",
+       "      <td>TiTiCaCa Booth</td>\n",
+       "      <td>cold cuts</td>\n",
+       "      <td>https://img.wongnai.com/p/400x400/2023/12/29/2...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2869</th>\n",
+       "      <td>TiTiCaCa Booth</td>\n",
+       "      <td>hash brown</td>\n",
+       "      <td>https://img.wongnai.com/p/400x400/2024/06/01/c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2870</th>\n",
+       "      <td>TiTiCaCa Booth</td>\n",
+       "      <td>Chicken pate</td>\n",
+       "      <td>https://img.wongnai.com/p/400x400/2023/12/29/b...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2871</th>\n",
+       "      <td>TiTiCaCa Booth</td>\n",
+       "      <td>pork tacos</td>\n",
+       "      <td>https://img.wongnai.com/p/400x400/2023/12/29/8...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2872</th>\n",
+       "      <td>TiTiCaCa Booth</td>\n",
+       "      <td>fish and chips</td>\n",
+       "      <td>https://img.wongnai.com/p/400x400/2024/06/01/6...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2453 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                restaurant_name              menu_name  \\\n",
+       "420   Pan Bagels (แพน เบเกิลส์)  Iced Ceylon Tea Latte   \n",
+       "421   Pan Bagels (แพน เบเกิลส์)          Thai Iced Tea   \n",
+       "422   Pan Bagels (แพน เบเกิลส์)          Orange Matcha   \n",
+       "423   Pan Bagels (แพน เบเกิลส์)    Iced Coconut Matcha   \n",
+       "424   Pan Bagels (แพน เบเกิลส์)      Iced Matcha Latte   \n",
+       "...                         ...                    ...   \n",
+       "2868             TiTiCaCa Booth              cold cuts   \n",
+       "2869             TiTiCaCa Booth             hash brown   \n",
+       "2870             TiTiCaCa Booth           Chicken pate   \n",
+       "2871             TiTiCaCa Booth             pork tacos   \n",
+       "2872             TiTiCaCa Booth         fish and chips   \n",
+       "\n",
+       "                                             menu_image  \n",
+       "420   https://img.wongnai.com/p/400x400/2024/07/03/7...  \n",
+       "421   https://img.wongnai.com/p/400x400/2023/08/23/9...  \n",
+       "422   https://img.wongnai.com/p/400x400/2024/07/03/c...  \n",
+       "423   https://img.wongnai.com/p/400x400/2024/12/28/e...  \n",
+       "424   https://img.wongnai.com/p/400x400/2023/08/23/f...  \n",
+       "...                                                 ...  \n",
+       "2868  https://img.wongnai.com/p/400x400/2023/12/29/2...  \n",
+       "2869  https://img.wongnai.com/p/400x400/2024/06/01/c...  \n",
+       "2870  https://img.wongnai.com/p/400x400/2023/12/29/b...  \n",
+       "2871  https://img.wongnai.com/p/400x400/2023/12/29/8...  \n",
+       "2872  https://img.wongnai.com/p/400x400/2024/06/01/6...  \n",
+       "\n",
+       "[2453 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
